fix secondary on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
 
     /* Sizes */
     --s-page-width: 1200px;
+    --s-padding: 130px;
 
     /* Fonts */
     --ff: "EB Garamond", serif;
@@ -83,7 +84,21 @@ table td {
     left: 0;
     right: 0;
     z-index: 1000;
-    background: linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.738) 19%, rgba(0, 0, 0, 0.541) 34%, rgba(0, 0, 0, 0.382) 47%, rgba(0, 0, 0, 0.278) 56.5%, rgba(0, 0, 0, 0.194) 65%, rgba(0, 0, 0, 0.126) 73%, rgba(0, 0, 0, 0.075) 80.2%, rgba(0, 0, 0, 0.042) 86.1%, rgba(0, 0, 0, 0.021) 91%, rgba(0, 0, 0, 0.008) 95.2%, rgba(0, 0, 0, 0.002) 98.2%, transparent 100%);
+    background: linear-gradient(to bottom, 
+  black 0%, 
+  rgba(0, 0, 0, 0.85) 19%, 
+  rgba(0, 0, 0, 0.72) 34%, 
+  rgba(0, 0, 0, 0.58) 47%, 
+  rgba(0, 0, 0, 0.45) 56.5%, 
+  rgba(0, 0, 0, 0.32) 65%, 
+  rgba(0, 0, 0, 0.22) 73%, 
+  rgba(0, 0, 0, 0.126) 80.2%, 
+  rgba(0, 0, 0, 0.075) 86.1%, 
+  rgba(0, 0, 0, 0.042) 91%, 
+  rgba(0, 0, 0, 0.021) 95.2%, 
+  rgba(0, 0, 0, 0.008) 98.2%, 
+  transparent 100%
+);
     padding: 1rem 2rem;
     display: flex;
     justify-content: space-between;
@@ -100,13 +115,17 @@ table td {
     line-height: 1;
 }
 
+.header .text-link {
+    margin-top: -30px;
+}
+
 .header a:hover {
     opacity: 0.8;
 }
 
 /* About Section */
 .about-section {
-    padding: 4rem 2rem;
+    padding: var(--s-padding) 2rem calc(var(--s-padding) - 50px) 2rem;
     max-width: var(--s-page-width);
     margin: 0 auto;
     display: grid;
@@ -121,7 +140,7 @@ table td {
 
 /* Text Block */
 .text-block {
-    padding: 4rem 2rem;
+    padding: var(--s-padding) 2rem;
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
@@ -142,7 +161,7 @@ main {
     width: 100%;
     background: var(--c-footer-background);
     color: white;
-    padding: 3rem 2rem 2rem;
+    padding: 0 2rem;
     font-size: var(--fs-small);
 }
 
@@ -157,6 +176,7 @@ main {
 }
 
 .footer-content {
+    padding: 80px 0;
     max-width: var(--s-page-width);
     margin: 0 auto;
     display: grid;
@@ -177,7 +197,7 @@ main {
 
 .footer__copyright {
     text-align: center;
-    padding: 2rem 0 0 0;
+    padding: 0 0 50px 0;
 }
 
 /* Responsive */
